# roxoptr2

./: .gitignore  .hgignore  COPYING  COPYING-bindist  INSTALL  Makefile  Makefile.am  NEWS  README  bootstrap.sh  configure.in  meta.xml
leveldata/: levels.list
leveldata/bunt/: level.cfg
leveldata/level0/: level.cfg
leveldata/n666/: spacey.cfg
leveldata/n666_aqua/: level.cfg
leveldata/n666_candy/: candy.cfg
leveldata/n666_mario/: mariolevel.cfg
leveldata/n666_space/: spacey.cfg
leveldata/strichlevel/: level.cfg
leveldata/zep/: level.cfg
source/: Makefile.am  cfgparser.c  cfgparser.h  display.c  display.h  filesys.c  filesys.h  game.c  game.h  level.h  levels.c  main.c  main.h  menu.c  menu.h  overlays.c  overlays.h  sprite.c  sprite.h
source/img/: heli.xbm
source/levels/: level_tpl.h
source/levels/lv0/: lv0.c  lv0.xbm
source/levels/lv1/: lv1.c  lv1.xbm  lv1.xpm
sprites/: eggship.cfg  mario.cfg  red_heli.cfg  submarine.cfg  tooth.cfg  ufo.cfg
